# MA_train_for_ros

./: README.md
chapter2/devel/: .catkin  .rosinstall
chapter2/devel/lib/pkgconfig/: robot_description.pc
chapter2/devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
chapter2/src/robot_description/urdf/: robot_base.urdf.xacro  robot_essentials.xacro
ros1/: README.md
ros1/.catkin_tools/profiles/default/: devel_collisions.txt
ros1/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros1/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
ros1/devel/.private/demo_3508_control/: .catkin  .rosinstall
ros1/devel/.private/msg_pub_demo/: .catkin  local_setup.sh  setup.sh
ros1/devel/.private/node_demo/: .catkin  local_setup.sh
ros1/devel/.private/rm_common/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros1/devel/.private/rm_control/: .catkin
ros1/devel/.private/rm_dbus/: .catkin  .rosinstall  local_setup.sh
ros1/devel/.private/rm_gazebo/: .catkin  local_setup.sh
ros1/devel/.private/rm_hw/: .catkin  setup.sh
ros1/devel/.private/rm_msgs/: .catkin  setup.sh
ros1/devel/.private/rm_referee/: .catkin  local_setup.sh
ros1/devel/.private/robot_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros1/devel/.private/rosparam_load_demo/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros1/devel/include/node_demo/: UserType.h
ros1/devel/include/rm_msgs/: ActuatorState.h  BalanceState.h  BulletAllowance.h  CameraStatus.h  CameraStatusRequest.h  CameraStatusResponse.h  CapacityData.h  ChassisCmd.h  ClientMapReceiveData.h  ClientMapSendData.h  ContinousDetectorSwitch.h  ContinousDetectorSwitchRequest.h  ContinousDetectorSwitchResponse.h  DartClientCmd.h  DartRemainingTime.h  DartStatus.h  DbusData.h  EnableGyro.h  EnableGyroRequest.h  EnableGyroResponse.h  EnableImuTrigger.h  EnableImuTriggerRequest.h  EnableImuTriggerResponse.h  EngineerAction.h  EngineerActionFeedback.h  EngineerActionGoal.h  EngineerActionResult.h  EngineerFeedback.h  EngineerGoal.h  EngineerResult.h  EngineerUi.h  EventData.h  GameRobotHp.h  GameRobotStatus.h  GameStatus.h  GimbalCmd.h  GimbalDesError.h  GpioData.h  IcraBuffDebuffZoneStatus.h  KalmanData.h  (+33 more)
ros1/devel/lib/msg_pub_demo/: demo_message_publisher  demo_message_subscriber
ros1/devel/lib/node_demo/: my_node
ros1/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  demo.pc  demo_3508_control.pc  msg_pub.pc  msg_pub_demo.pc  node_demo.pc  rm_common.pc  rm_dbus.pc  rm_gazebo.pc  rm_hw.pc  rm_msgs.pc  rm_referee.pc  robot_description.pc  rosparam_load_demo.pc
ros1/devel/lib/rm_common/: test_kalman
ros1/devel/lib/rm_dbus/: rm_dbus
ros1/devel/lib/rm_hw/: rm_hw
ros1/devel/lib/rm_referee/: rm_referee
ros1/devel/lib/rosparam_load_demo/: rosparam_load_demo_node
ros1/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ros1/devel/share/demo/cmake/: demoConfig.cmake
ros1/devel/share/demo_3508_control/cmake/: demo_3508_controlConfig-version.cmake  demo_3508_controlConfig.cmake
ros1/devel/share/msg_pub/cmake/: msg_pubConfig.cmake
ros1/devel/share/msg_pub_demo/cmake/: msg_pub_demoConfig-version.cmake  msg_pub_demoConfig.cmake
ros1/devel/share/node_demo/cmake/: node_demo-msg-extras.cmake  node_demo-msg-paths.cmake  node_demoConfig-version.cmake  node_demoConfig.cmake
ros1/devel/share/rm_common/cmake/: rm_commonConfig-version.cmake  rm_commonConfig.cmake
ros1/devel/share/rm_dbus/cmake/: rm_dbusConfig-version.cmake  rm_dbusConfig.cmake
ros1/devel/share/rm_gazebo/cmake/: rm_gazeboConfig-version.cmake  rm_gazeboConfig.cmake
ros1/devel/share/rm_hw/cmake/: rm_hwConfig-version.cmake  rm_hwConfig.cmake
ros1/devel/share/rm_msgs/cmake/: rm_msgs-msg-extras.cmake  rm_msgs-msg-paths.cmake  rm_msgsConfig-version.cmake  rm_msgsConfig.cmake
ros1/devel/share/rm_msgs/msg/: EngineerAction.msg  EngineerActionFeedback.msg  EngineerActionGoal.msg  EngineerActionResult.msg  EngineerFeedback.msg  EngineerGoal.msg  EngineerResult.msg
ros1/devel/share/rm_referee/cmake/: rm_refereeConfig-version.cmake  rm_refereeConfig.cmake
ros1/logs/msg_pub_demo/: build.cmake.000.log.stderr
ros1/logs/rosparam_load_demo/: build.check.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
ros1/src/demo_3508_control/: CMakeLists.txt  README.md
ros1/src/demo_3508_control/config/: demo_controller.yaml  rm_hw.yaml
ros1/src/demo_3508_control/launch/: demo_3508.launch  load_controller.launch  load_rm_hw.launch
ros1/src/demo_3508_control/urdf/: demo.urdf.xacro
ros1/src/msg_pub_demo/: CMakeLists.txt  README.md
ros1/src/msg_pub_demo/launch/: demo_launch.launch
ros1/src/msg_pub_demo/src/: msg_pub_demo.cpp  msg_sub_demo.cpp
ros1/src/node_demo/: CMakeLists.txt  README.md
ros1/src/node_demo/msg/: UserType.msg
ros1/src/node_demo/src/: node_demo.cpp
ros1/src/robot_description/: README.md
ros1/src/robot_description/urdf/: robot_base.urdf.xacro  robot_essentials.xacro
ros1/src/rosparam_load_demo/: CMakeLists.txt
ros1/src/rosparam_load_demo/config/: demo_config.yaml
ros1/src/rosparam_load_demo/launch/: rosparam_load.launch
ros1/src/rosparam_load_demo/src/: load_param.cpp
ros2/.cache/clangd/index/: serial_example.cpp.3BC101C5E979A486.idx  vis_demo.cpp.292A858EC3D8A530.idx
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build
ros2/src/marker_array/: CMakeLists.txt
ros2/src/marker_array/src/: marker_array_demo.cpp
ros2/src/serial_example/: CMakeLists.txt  package.xml
ros2/src/serial_example/src/: serial_example.cpp
ros2/src/urdf_demo/: CMakeLists.txt  README.md
ros2/src/urdf_demo/urdf/: link.xacro  urdf_demo.urdf
ros2/src/urdf_example/: CMakeLists.txt
ros2/src/urdf_with_stl/: CMakeLists.txt  package.xml
ros2/src/urdf_with_stl/description/: robot_base.urdf.xacro
ros2/src/urdf_with_stl/launch/: rsp.launch.py
ros2/src/vis_demo/: CMakeLists.txt  package.xml
ros2/src/vis_demo/src/: vis_demo.cpp
(+624 files in other folders)
